# treplica

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cursor_speckit_implementation_discussio.md  prompt.md
.github/: copilot-instructions.md
.github/workflows/: release.yml  security-audit.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/desktop/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  stealth.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_system_prompt_and_routing.sql  0003_pre_meeting_context.sql  0004_session_hosted_ack.sql  0005_pre_meeting_attachment_pages.sql
apps/desktop/src-tauri/native/: treplica_speech.m
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/audio/: macos_speech.rs  mod.rs  native_mic_capture.rs  native_system_capture.rs  stt_failure.rs  stt_rate_limit.rs  system_stt.rs  transcription.rs
apps/desktop/src-tauri/src/commands/: audio_capture_commands.rs  context_commands.rs  history_commands.rs  mod.rs  model_commands.rs  platform_commands.rs  provider_commands.rs  session_commands.rs  session_dto.rs  settings_commands.rs  setup_commands.rs  storage_commands.rs  translation_commands.rs  update_commands.rs
apps/desktop/src-tauri/src/documents/: attachment.rs  export.rs  import.rs  mod.rs  parse.rs  service.rs
apps/desktop/src-tauri/src/logging/: audit.rs  mod.rs  performance.rs
apps/desktop/src-tauri/src/providers/: adapter.rs  mod.rs  privacy.rs  router.rs  url_validation.rs
apps/desktop/src-tauri/src/sessions/: ai_activity.rs  guidance.rs  guidance_classifier.rs  live_listener.rs  live_pipeline.rs  mod.rs  service.rs  suggestions.rs  translation.rs  vision.rs  vision_image.rs
apps/desktop/src-tauri/src/shortcuts/: mod.rs  send_transcript.rs
apps/desktop/src-tauri/src/stealth/: capture_exclusion.rs  mod.rs  screen_capture.rs  window.rs
apps/desktop/src-tauri/src/storage/: app_settings.rs  audio_capture.rs  credentials.rs  deletion.rs  mod.rs
crates/audio-core/: Cargo.toml
crates/audio-core/src/: lib.rs  simulated.rs
crates/local-store/: Cargo.toml
crates/local-store/src/: database.rs  history_repository.rs  lib.rs  models.rs  provider_repository.rs  repositories.rs  translation_repository.rs
crates/local-store/tests/: local_store_tests.rs
crates/provider-core/: Cargo.toml
crates/provider-core/src/: chat_parse.rs  health.rs  hosted.rs  lib.rs  ollama.rs  openai_compatible.rs  prompts.rs  tasks.rs  transcription.rs  vision.rs
crates/provider-core/tests/: provider_health.rs
docs/: building-from-source.md  privacy.md  provider-setup.md  user-guide.md
site/: package-lock.json  package.json
specs/001-treplica-product-spec/: data-model.md  ecosystem.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  verification.md
tests/contract/: document_generation_contract.rs  guidance_contract.rs  local_data_contract.rs  local_deletion_contract.rs  objection_guidance_contract.rs  provider_adapter_contract.rs  translation_contract.rs
tests/contract-tests/: Cargo.toml
tests/contract-tests/src/: lib.rs
tests/contract-tests/tests/: document_generation_contract.rs  guidance_contract.rs  local_data_contract.rs  local_deletion_contract.rs  objection_guidance_contract.rs  provider_adapter_contract.rs  translation_contract.rs
tools/: test-providers.ps1
(+201 files in other folders)
