[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/provider-core",
    "crates/local-store",
    "crates/audio-core",
    "tests/contract-tests",
    "tests/integration-tests",
    "tools/gen-updater-keys",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
