[package]
name = "contract-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
provider-core = { path = "../../crates/provider-core" }
local-store = { path = "../../crates/local-store" }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tempfile = "3"
